Fri Mar 19 16:56:49 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: More lenient comment parsing, allows extra dashes.

Fri Mar 19 16:52:51 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Check for presence of more than one <title> tag.

	* htlib/mytimegm.cc: Fix Y2K problems.

Fri Mar 19 16:43:28 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Add patch from Gabriele to ensure META
	descriptions are parsed, even if 'description' is added to the
	keyword list.

Fri Mar 19 16:37:08 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/parser.h, htsearch/parser.cc: Clean up patch made for
	error messages, made on Feb 16.

Tue Feb 16 23:48:09 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in, configure: Default to 'int' when we cannot
	establish type used by getpeername.

	* htdoc/RELEASE.html: Additional notes on everything fixed in 3.1.1.

Tue Feb 16 23:45:26 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* contrib/parse_doc.pl: Add replacement for less-capable (and
	buggy) parse_word_doc.pl script. Handles Word, PS, RTF, and
	WordPerfect files, with appropriate file->text converters.

	* htsearch/parser.cc, htsearch/parser.h: Add more error messages
	when the boolean expression is invalid.

Mon Feb 15 21:02:24 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc(RetrieveLocal): Fix to ensure we report
	reading only max_doc_size bytes, even when the document is larger.

	* configure.in, configure: Add 'socklen_t' to getpeername check to
	prevent problems configuring on Solaris 7.

	* htdoc/RELEASE.html: Minor changes for 3.1.1 release.
	
Sun Feb 14 16:29:48 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc(retrieveHTTP, retrieveLocal): Fix document
	size when the document is larger than max_doc_size. Size should be
	that sent by the server or as given by stat().

	* htdoc/*.html: More cleanups from Marjolein.
